[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "types-imgui"
version = "0.1.0"
description = "Type stubs for the Dear ImGui Python bindings."
requires-python = ">=3.12"
urls = { Homepage = "https://github.com/m4reQ/types-imgui", Issues = "https://github.com/m4reQ/types-imgui/issues" }
authors = [ {name = "m4reQ", email="mmizerski4@gmail.com"} ]
classifiers = [
    "Typing :: Typed",
    "Typing :: Stubs Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12" ]

[tool.setuptools]
packages = ["types_imgui"]
package-data = { types_imgui = ["*.pyi", "**/*.pyi", "**/py.typed"] }
exclude-package-data = { types_imgui = ["*.py"] }
